@@ -63,7 +63,7 @@ body { margin-top: 20px !important; }
 /* second-and-more-level hovering */
 #admin_menu li li.expandable { background: #45454a url(images/arrow.png) no-repeat 145px 7px; }
 #admin_menu li li:hover,
-#admin_menu li li.sfhover {
+#admin_menu li li.iehover {
   background-color: #111;
 }
 #admin_menu li li:hover a,
@@ -80,13 +80,13 @@ body { margin-top: 20px !important; }
   border-color: #323232;
 }
 #admin_menu li li:hover li a,
-#admin_menu li li.sfhover li a,
-#admin_menu li li.sfhover li.sfhover li a {
+#admin_menu li li.iehover li a,
+#admin_menu li li.iehover li.iehover li a {
   color: #eee;
 }
-#admin_menu li li.sfhover a,
-#admin_menu li li.sfhover li.sfhover a,
-#admin_menu li li.sfhover li.sfhover li.sfhover a {
+#admin_menu li li.iehover a,
+#admin_menu li li.iehover li.iehover a,
+#admin_menu li li.iehover li.iehover li.iehover a {
   color: #fff; width: 90%; /* IE */
 }
 
