@@ -40,12 +40,7 @@ function admin_menu_menu($may_cache) {
   if (!$may_cache && user_access('access administration menu')) {
     $path = drupal_get_path('module', 'admin_menu');
     drupal_add_css($path .'/admin_menu.css', 'module', 'screen', FALSE);
-
-    // IE6 fix.
-    $ie_header  = '<!--[if lt IE 7]>';
-    $ie_header .= '<script type="text/javascript" src="'. base_path() . $path .'/admin_menu.js' .'"></script>';
-    $ie_header .= '<![endif]-->';
-    drupal_set_html_head($ie_header);
+    drupal_add_js($path .'/admin_menu.js');
   }
 }
 
