@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 5.x-2.x, xxxx-xx-xx
 ------------------------------
+#204935 by jjeff: Added mouseout delay for hovered menus (yay!).
 #193941 by downgang: Fixed margin in IE6 using Garland theme.
 #197306 by sun: Fixed 'Run updates' leads to wrong url with clean URLs disabled.
 Moved images into sub-folder.
